--- a/style.css
+++ b/style.css
@@ -105,7 +105,7 @@ html{
 /* Project */
 #project{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     background-color: black;
     color: black;
     align-items: center;
@@ -129,8 +129,8 @@ html{
     box-sizing: border-box;
 }
 .major img{
-    width: 490px;
-    height: 380px;
+    width: 590px;
+    height: 480px;
     margin: 10px;
 }
 /* Contact Section */ 
