--- a/style.css
+++ b/style.css
@@ -103,36 +103,44 @@ html{
     background-color: #33FF39;
 }
 /* Project */
-#project{
+#project {
     display: flex;
-    flex-direction: row;
-    background-color: black;
-    color: black;
+    flex-direction: column;
     align-items: center;
+    background-color: black;
+    color: white;
     padding: 20px;
-}
-.gallery{
+    margin-bottom: 20px;
+  }
+  
+  .gallery {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     box-sizing: border-box;
-}
-.gallery img{
+  }
+  
+  .gallery img {
     width: 170px;
     height: 190px;
     margin: 10px;
-}
-.major {
-    display: table-column;
-    flex-direction: wrap;
-    justify-content: space-around;
+  }
+  
+  .major {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
-}
-.major img{
+    white-space: nowrap;
+  }
+  
+  .major img {
     width: 310px;
     height: 210px;
     margin: 10px;
-}
+  }
+  
+  
 /* Contact Section */ 
 #contact{
     display: flex;
